Updated docs for centural data structures.

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -445,93 +445,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dyfs.forward.Var"
+    "### autodiff.forward.Expression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Var` represents a variable. It implements the `eval_at` method that returns the evaluation of this variable at a certain point. 'Evaluation of this variable' sure sounds odd. This is to make the `Var` class compatible with `Expr` class: they should share the same interface (see `dyfs.forward.Expr`)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Var:\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        \n",
-    "    \"\"\"\n",
-    "    Evaluates this variable on the point represented by val_dict\n",
-    "    Params: \n",
-    "        val_dict: dictionary, contains the variables and their values\n",
-    "    Return:\n",
-    "        eval: Eval, the evaluation of Var\n",
-    "    \"\"\"\n",
-    "    def eval_at(self, val_dict):"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### dyfs.forward.Eval"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`Eval` represents an evaluation. It implements `val` and `der` methods, which return the the value part of this evaluation and the derivative part of this evaluation respectively. The `der` method returns a dictionary whose keys are references to `Var`. The value of each key is the partial derivative with respect to the key."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Eval:\n",
-    "    \n",
-    "    def __init__(self, val, der):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Return the value part of this evaluation\n",
-    "    Return:\n",
-    "        the value\n",
-    "    \"\"\"\n",
-    "    def val(self):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Return the derivative part of this evaluation\n",
-    "    Return:\n",
-    "        the derivative\n",
-    "    \"\"\"\n",
-    "    def der(self):"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### dyfs.forward.Expr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`VFun` represents an expression. It has 2 private fields: `_ele_func` and `_sub_expr`. `_ele_func` is the element function of this expression and `_sub_expr` is the sub-expressions of this function. For example: for `h = fwd.VFun(fun_dict={f: (x), g: (x, y)}, var_list=[x, y])`, its `_funcs` will be a list containing `f` and `g`.\n",
+    "`Expression` represents an expression. It implements the `evaluation_at` and the `derivative_at` methods. The first returns the value of this expression at a certain point. The second returns the derivative (with respect to given variable / expression) of this expression at a certain point.\n",
     "\n",
-    "`VFun` implements the `eval_at` method that returns the evaluation of this expression at a certain point."
+    "There are 2 subclass of `Expression`, both implements the same interface but have some difference in their implementation of `evaluation_at` and `derivative_at` methods: `Variable`, which represents an independent 'base' variable, and `Constant`, which represents a constant. \n",
+    "\n",
+    "The interface of `Expression` is as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Expression:\n",
+    "    \"\"\"\n",
+    "    The contructor of Expression. There is no need to call this constructor explicitly.\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        ele_func:  ElementFunction*, the element function involved expression\n",
+    "        sub_expr1: Expression, the first sub-expression involved in this expression\n",
+    "        sub_expr2: Expression, the second sub-expression incolved in this expression\n",
+    "    * Elementfunction is the interface shared by Add, Mul, Sub, Pow, Exp, Sin... We may want to explicitly add\n",
+    "      an abstract base class in the future\n",
+    "    \"\"\"\n",
+    "    def __init__(self, ele_func, sub_expr1, sub_expr2=None):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    The value of this expression at the point specified by val_dict.\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "    Output:\n",
+    "        numeric, the value of thi expression at the point specified by val_dict\n",
+    "    \"\"\"\n",
+    "    def evaluation_at(self, val_dict):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    The derivative with respect to certain variable / expression at the point specified by valdict.\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        var:      Expression, the variable / expression to calculate derivative with respect to\n",
+    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "    Output:\n",
+    "        numeric, the derivative with respect to certain variable / expression at the point specified by valdict\n",
+    "    \"\"\"\n",
+    "    def derivative_at(self, var, val_dict):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dyfs.forward.Variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Variable` is a special kind of `Expression`. Its main purpose is to make the client code more readable.\n",
+    "\n",
+    "The interface of `Variable` is as follows:"
    ]
   },
   {
@@ -542,52 +524,105 @@
    },
    "outputs": [],
    "source": [
-    "class Expr:\n",
-    "    \n",
-    "    def __init__(self, ele_func, sub_expr,)\n",
-    "    \n",
+    "class Variable(Expression):\n",
     "    \"\"\"\n",
-    "    _ele_func: reference to a class, \n",
-    "    the element function (e.g. Sin, Exp...) of this expression\n",
+    "    The contructor of Constant.\n",
     "    \"\"\"\n",
-    "    _ele_func\n",
+    "    def __init__(self, val):\n",
     "    \n",
     "    \"\"\"\n",
-    "    _sub_expr: a list,\n",
-    "    the sub-expressions of this expression\n",
+    "    The value of this variable at the point specified by val_dict.\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "    Output:\n",
+    "        numeric, the value of thi expression at the point specified by val_dict\n",
     "    \"\"\"\n",
-    "    _sub_expr\n",
+    "    def evaluation_at(self, val_dict):\n",
     "    \n",
     "    \"\"\"\n",
-    "    Evaluates this variable on the point represented by val_dict\n",
-    "    Params: \n",
-    "        val_dict: dictionary, contains the variables and their values\n",
-    "    Return:\n",
-    "        eval: Eval, the evaluation of Var\n",
-    "        \n",
-    "    ** notes on implementation **\n",
-    "    * eval_at should first pass the val_dict to the eval_at method of\n",
-    "    * its _sub_expr. The returned Eval should then be passed to the \n",
-    "    * the eval_at method of _ele_func to fully evaluate this expression. \n",
+    "    The derivative with respect to certain variable / expression at the point specified by valdict. The output\n",
+    "    of this function will always be either 0.0 (derivative w.r.t. some other variable) or 1.0 (derivative w.r.t.\n",
+    "    itself).\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        var:      Expression, the variable / expression to calculate derivative with respect to\n",
+    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "    Output:\n",
+    "        numeric, the derivative with respect to certain variable / expression at the point specified by valdict.\n",
     "    \"\"\"\n",
-    "    def eval_at(self, val_dict):"
+    "    def derivative_at(self, var, val_dict):"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dyfs.forward.VFun"
+    "### dyfs.forward.Constant"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`VFun` represents a vector function. It has a private field `_funcs`, which is the emapping rule for each entry of \n",
-    "    the output vector. For example: for `g = fwd.exp(x+y)`, its `_ele_func` will be pointing to `fwd.exp_eval`, and its `_sub_expr` will be pointing to a `Expr` that represents $x+y$ (In turn, this `Expr`'s `_ele_func` will be pointing to `fwd.add_eval`, and its `_sub_expr` will be pointing to a list containing a `Var` representing $x$ and a `Var` representing $y$).\n",
+    "`Constant` is a special kind of `Expression` representing a constant. \n",
     "\n",
-    "`Expr` implements the `eval_at` method that returns the evaluation of this expression at a certain point."
+    "The interface of `Variable` is as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Constant(Expression):\n",
+    "    \"\"\"\n",
+    "    The contructor of Constant. There is no need to call this constructor explicitly.\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        val: numeric, the value of this constant\n",
+    "    \"\"\"\n",
+    "    def __init__(self, val):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    The value of this variable at the point. The output of this function will always be the val passed to the\n",
+    "    constructor\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "    Output:\n",
+    "        numeric, the value of thi expression at the point specified by val_dict\n",
+    "    \"\"\"\n",
+    "    def evaluation_at(self, val_dict):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    The derivative with respect to certain variable / expression at the point specified by valdict. The output\n",
+    "    of this function will always be 0.0.\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        var:      Expression, the variable / expression to calculate derivative with respect to\n",
+    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "    Output:\n",
+    "        numeric, the derivative with respect to certain variable / expression at the point specified by valdict.\n",
+    "    \"\"\"\n",
+    "    def derivative_at(self, var, val_dict):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dyfs.forward.VectorFunction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`VectorFunction` represents a vector function. We haven't implemented this class for now.\n",
+    "\n",
+    "The interface of `Variable` will be as follows:"
    ]
   },
   {
@@ -600,35 +635,13 @@
    "source": [
     "class VFun:\n",
     "    \n",
-    "    \"\"\"\n",
-    "    The functions representing the mapping rule for each entry of \n",
-    "    the output vector\n",
-    "    \"\"\"\n",
-    "    _funcs\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Construct a vector function.\n",
-    "    Params:\n",
-    "        fun_dict: a dictionary, \n",
-    "                  key: Expr, the functions representing the mapping rule\n",
-    "                       for each entry of the output vector\n",
-    "                  val: Var, the variables involved in each function\n",
-    "        var_dict: a list, the Var objects involved in this VFun object\n",
-    "    \"\"\"\n",
     "    def __init__(self, fun_dict, var_list):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Evaluates this variable on the point represented by val_dict\n",
-    "    Params: \n",
-    "        val_dict: dictionary, contains the variables and their values\n",
-    "    Return:\n",
-    "        eval: Eval, the evaluation of Var, whose derivative part should\n",
-    "            be a Jacobian\n",
+    "\n",
+    "    def evaluation_at(self, val_dict):\n",
     "        \n",
-    "    ** notes on implementation **\n",
-    "    * Call the eval_at function of each Expr in _funcs\n",
-    "    \"\"\"\n",
-    "    def eval_at(self, val_dict)"
+    "    def derivative_at(self, var, val_dict):\n",
+    "    \n",
+    "    def jacobian_at(self, val_dict):"
    ]
   },
   {
