--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -13,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Expression:\n",
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +348,7 @@
        "7.3890560989306504"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -375,7 +377,7 @@
        "-7.3890560989306504"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +404,7 @@
        "7.3890560989306504"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +444,7 @@
        "3.7182818284590451"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +471,7 @@
        "1.0"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +498,7 @@
        "2.7182818284590451"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -528,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +539,7 @@
        "4.0"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +559,7 @@
        "2.0"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +579,7 @@
        "1.5"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +599,7 @@
        "1.0"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +630,7 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -661,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +672,7 @@
        "9.0"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +692,7 @@
        "6.0"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,26 +710,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "x=Variable()\n",
-    "f= -y*x"
+    "f= -x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-6"
+       "-2"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,16 +740,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-3.0"
+       "-1.0"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
