Updated Implementation details.

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -445,6 +445,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### About how the derivative is evaluated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The centural data structure in `autodiff` are `Expression` and `ElementFunction` (which is the common interface shared by `Add`, `Mul`, `Pow`, `Exp`, `Sin`... We may want to explicitly add an abstract base class in the future). `Expression`'s are composed of one `ElementFunction`  plus one or two sub-`Expression`'s. When evaluating the derivative, `Expression` will pass its sub-`Expression`('s) to the `ElementFunction`'s `derivative_at` method. `ElementFunction`'s `derivative_at` method will then call the `evaluation_at` method and `derivative_at` method os the sub-`Expression`('s) and use the returned value to calculate derivative. It is a mutual recursive process, where the base lies in `Variable` class and `Constant` class, whose `evaluation_at` method and `derivative_at` method return a solid number (rather than continue calling another function).\n",
+    "\n",
+    "The `evaluation_at` method works similarly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### autodiff.forward.Expression"
    ]
   },
@@ -452,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Expression` represents an expression. It implements the `evaluation_at` and the `derivative_at` methods. The first returns the value of this expression at a certain point. The second returns the derivative (with respect to given variable / expression) of this expression at a certain point.\n",
+    "`Expression` represents an expression. It implements the `evaluation_at` and the `derivative_at` methods. The first returns the value of this expression at a certain point. The second returns the derivative (with respect to given variable / expression) of this expression at a certain point. There is not need to contruct an `Expression` explicitly when using `autodiff`.\n",
     "\n",
     "There are 2 subclass of `Expression`, both implements the same interface but have some difference in their implementation of `evaluation_at` and `derivative_at` methods: `Variable`, which represents an independent 'base' variable, and `Constant`, which represents a constant. \n",
     "\n",
@@ -473,8 +489,8 @@
     "        ele_func:  ElementFunction*, the element function involved expression\n",
     "        sub_expr1: Expression, the first sub-expression involved in this expression\n",
     "        sub_expr2: Expression, the second sub-expression incolved in this expression\n",
-    "    * Elementfunction is the interface shared by Add, Mul, Sub, Pow, Exp, Sin... We may want to explicitly add\n",
-    "      an abstract base class in the future\n",
+    "    * Elementfunction is the common interface shared by Add, Mul, Sub, Pow, Exp, Sin... We may want to \n",
+    "      explicitly add an abstract base class in the future\n",
     "    \"\"\"\n",
     "    def __init__(self, ele_func, sub_expr1, sub_expr2=None):\n",
     "    \n",
@@ -484,7 +500,7 @@
     "    Input:\n",
     "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the value of thi expression at the point specified by val_dict\n",
+    "        numeric, the value of the expression at the point specified by val_dict\n",
     "    \"\"\"\n",
     "    def evaluation_at(self, val_dict):\n",
     "    \n",
@@ -504,14 +520,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dyfs.forward.Variable"
+    "### autodiff.forward.Variable"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Variable` is a special kind of `Expression`. Its main purpose is to make the client code more readable.\n",
+    "`Variable` is a special kind of `Expression`. Its main purpose is to make the client code more readable. Client codes of `autodiff` typically starts with creating `Variable` objects.\n",
     "\n",
     "The interface of `Variable` is as follows:"
    ]
@@ -536,7 +552,7 @@
     "    Input:\n",
     "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the value of thi expression at the point specified by val_dict\n",
+    "        numeric, the value of the expression at the point specified by val_dict\n",
     "    \"\"\"\n",
     "    def evaluation_at(self, val_dict):\n",
     "    \n",
@@ -558,14 +574,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dyfs.forward.Constant"
+    "### autodiff.forward.Constant"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Constant` is a special kind of `Expression` representing a constant. \n",
+    "`Constant` is a special kind of `Expression` representing a constant. There is not need to contruct an `Expression` explicitly when using `autodiff`.\n",
     "\n",
     "The interface of `Variable` is as follows:"
    ]
@@ -592,7 +608,7 @@
     "    Input:\n",
     "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the value of thi expression at the point specified by val_dict\n",
+    "        numeric, the value of the expression at the point specified by val_dict\n",
     "    \"\"\"\n",
     "    def evaluation_at(self, val_dict):\n",
     "    \n",
@@ -613,7 +629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dyfs.forward.VectorFunction"
+    "### autodiff.forward.VectorFunction"
    ]
   },
   {
@@ -622,7 +638,7 @@
    "source": [
     "`VectorFunction` represents a vector function. We haven't implemented this class for now.\n",
     "\n",
-    "The interface of `Variable` will be as follows:"
+    "The interface of `VectorFunction` will be as follows:"
    ]
   },
   {
@@ -648,60 +664,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dyfs.forward.ele_func.Sin"
+    "### autodiff.forward.Exp"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The class representing the elementary function $x \\mapsto \\sin(x)$. It implements 2 functions: `expr` and `eval_at` is a factory method that contruct an `Expr` of $\\sin(x)$. `eval_at` is the method that does the calculation to evaluate $sin(x)$ at certain point."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Sin:\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Contruct and retur an Expr object\n",
-    "    \n",
-    "    ** notes on implementation **\n",
-    "    * this method should set the _sub_expr field of the constructed Expr\n",
-    "    * as well as the _ele_func field.\n",
-    "    \"\"\"\n",
-    "    def expr(self, sub_expr):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Evaluate the elementary function of sin, using the evaluations of \n",
-    "    sub-expressions.\n",
-    "    \n",
-    "    ** notes on implementation **\n",
-    "    * this method should set the _sub_expr field of the constructed Expr\n",
-    "    * as well as the _ele_func field.\n",
-    "    \"\"\"\n",
-    "    def eval_at(self, evals):   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### dyfs.forward.ele_func.Exp"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The class representing the elementary function $x \\mapsto \\exp(x)$. It implements 2 functions: `expr` and `eval_at` is a factory method that contruct an `Expr` of $\\sin(x)$. `eval_at` is the method that does the calculation to evaluate $exp(x)$ at certain point."
+    "`Exp` represents the elementary function $x \\mapsto \\exp(x)$. It implements 2 methods: `evaluation_at` and `derivative_at`. The first returns the value of some exponential expression. The second returns the derivative of some exponential expression. Its methods are called by `Expression` and need not be called by client codes. \n",
+    "\n",
+    "The interface of `Exp` is as follows:"
    ]
   },
   {
@@ -714,26 +686,62 @@
    "source": [
     "class Exp:\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    \"\"\"\n",
+    "    The value of this exponential expression at the point.\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        sub_expr1: Expression, the expression x in x -> exp(x)\n",
+    "        val_dict:  dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "    Output:\n",
+    "        numeric, the value of the expression at the point specified by val_dict\n",
+    "    \"\"\"\n",
+    "    @staticmethod\n",
+    "    def evaluation_at(sub_expr1, val_dict):\n",
     "    \n",
     "    \"\"\"\n",
-    "    Contruct and retur an Expr object\n",
-    "    \n",
-    "    ** notes on implementation **\n",
-    "    * this method should set the _sub_expr field of the constructed Expr\n",
-    "    * as well as the _ele_func field.\n",
+    "    The derivative with respect to certain variable / expression at the point specified by valdict.\n",
+    "    ------------------------\n",
+    "    Input:\n",
+    "        var:      Expression, the variable / expression to calculate derivative with respect to\n",
+    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "    Output:\n",
+    "        numeric, the derivative with respect to certain variable / expression at the point specified by valdict.\n",
     "    \"\"\"\n",
-    "    def expr(self, sub_expr):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Evaluate the elementary function of exp, using the evaluations of \n",
-    "    sub-expressions.\n",
-    "    \n",
-    "    ** notes on implementation **\n",
-    "    * this method should set the _sub_expr field of the constructed Expr\n",
-    "    * as well as the _ele_func field.\n",
-    "    \"\"\"\n",
-    "    def eval_at(self, evals):  "
+    "    @staticmethod\n",
+    "    def derivative_at(sub_expr1, var, val_dict):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### autodiff.forward.exp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`exp` is a free function that act as the constructor for an expression that has `Exp` as `ele_func`.\n",
+    "\n",
+    "The interface of `exp` is as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Return the exponential of an expression.\n",
+    "------------------------\n",
+    "    Input:\n",
+    "        expr: Expression, the expression x in x -> exp(x)\n",
+    "    Output:\n",
+    "        Expression, the exponential of expr\n",
+    "\"\"\"\n",
+    "def exp(expr):"
    ]
   }
  ],
