--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -497,14 +497,19 @@
    "source": [
     "class Expression:\n",
     "    \"\"\"\n",
-    "    The contructor of Expression. There is no need to call this constructor explicitly.\n",
+    "    The contructor of Expression. There is no need to call this \n",
+    "    constructor explicitly.\n",
     "    ------------------------\n",
     "    Input:\n",
-    "        ele_func:  ElementFunction*, the element function involved expression\n",
-    "        sub_expr1: Expression, the first sub-expression involved in this expression\n",
-    "        sub_expr2: Expression, the second sub-expression incolved in this expression\n",
-    "    * Elementfunction is the common interface shared by Add, Mul, Sub, Pow, Exp, Sin... We may want to \n",
-    "      explicitly add an abstract base class in the future\n",
+    "        ele_func:  ElementFunction*, the element function \n",
+    "                   involved expression\n",
+    "        sub_expr1: Expression, the first sub-expression involved \n",
+    "                   in this expression\n",
+    "        sub_expr2: Expression, the second sub-expression incolved \n",
+    "                   in this expression\n",
+    "    * Elementfunction is the common interface shared by Add, Mul, \n",
+    "      Sub, Pow, Exp, Sin... We may want to explicitly add an \n",
+    "      abstract base class in the future\n",
     "    \"\"\"\n",
     "    def __init__(self, ele_func, sub_expr1, sub_expr2=None):\n",
     "    \n",
@@ -512,20 +517,26 @@
     "    The value of this expression at the point specified by val_dict.\n",
     "    ------------------------\n",
     "    Input:\n",
-    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "        val_dict: dict, a dictionary representing a point (keys are \n",
+    "                  Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the value of the expression at the point specified by val_dict\n",
+    "        numeric, the value of the expression at the point specified \n",
+    "        by val_dict\n",
     "    \"\"\"\n",
     "    def evaluation_at(self, val_dict):\n",
     "    \n",
     "    \"\"\"\n",
-    "    The derivative with respect to certain variable / expression at the point specified by valdict.\n",
+    "    The derivative with respect to certain variable / expression at \n",
+    "    the point specified by valdict.\n",
     "    ------------------------\n",
     "    Input:\n",
-    "        var:      Expression, the variable / expression to calculate derivative with respect to\n",
-    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "        var:      Expression, the variable / expression to calculate \n",
+    "                  derivative with respect to\n",
+    "        val_dict: dict, a dictionary representing a point (keys are \n",
+    "                Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the derivative with respect to certain variable / expression at the point specified by valdict\n",
+    "        numeric, the derivative with respect to certain variable / \n",
+    "        expression at the point specified by valdict\n",
     "    \"\"\"\n",
     "    def derivative_at(self, var, val_dict):"
    ]
@@ -564,22 +575,28 @@
     "    The value of this variable at the point specified by val_dict.\n",
     "    ------------------------\n",
     "    Input:\n",
-    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "        val_dict: dict, a dictionary representing a point (keys are\n",
+    "        Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the value of the expression at the point specified by val_dict\n",
+    "        numeric, the value of the expression at the point specified \n",
+    "        by val_dict\n",
     "    \"\"\"\n",
     "    def evaluation_at(self, val_dict):\n",
     "    \n",
     "    \"\"\"\n",
-    "    The derivative with respect to certain variable / expression at the point specified by valdict. The output\n",
-    "    of this function will always be either 0.0 (derivative w.r.t. some other variable) or 1.0 (derivative w.r.t.\n",
-    "    itself).\n",
+    "    The derivative with respect to certain variable / expression at \n",
+    "    the point specified by valdict. The output of this function will \n",
+    "    always be either 0.0 (derivative w.r.t. some other variable) or \n",
+    "    1.0 (derivative w.r.t. itself).\n",
     "    ------------------------\n",
     "    Input:\n",
-    "        var:      Expression, the variable / expression to calculate derivative with respect to\n",
-    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "        var:      Expression, the variable / expression to calculate \n",
+    "                  derivative with respect to\n",
+    "        val_dict: dict, a dictionary representing a point (keys are \n",
+    "                  Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the derivative with respect to certain variable / expression at the point specified by valdict.\n",
+    "        numeric, the derivative with respect to certain variable / \n",
+    "        expression at the point specified by valdict.\n",
     "    \"\"\"\n",
     "    def derivative_at(self, var, val_dict):"
    ]
@@ -608,7 +625,8 @@
    "source": [
     "class Constant(Expression):\n",
     "    \"\"\"\n",
-    "    The contructor of Constant. There is no need to call this constructor explicitly.\n",
+    "    The contructor of Constant. There is no need to call this \n",
+    "    constructor explicitly.\n",
     "    ------------------------\n",
     "    Input:\n",
     "        val: numeric, the value of this constant\n",
@@ -616,25 +634,31 @@
     "    def __init__(self, val):\n",
     "    \n",
     "    \"\"\"\n",
-    "    The value of this variable at the point. The output of this function will always be the val passed to the\n",
-    "    constructor\n",
+    "    The value of this variable at the point. The output of this \n",
+    "    function will always be the val passed to the constructor\n",
     "    ------------------------\n",
     "    Input:\n",
-    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "        val_dict: dict, a dictionary representing a point (keys are \n",
+    "                  Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the value of the expression at the point specified by val_dict\n",
+    "        numeric, the value of the expression at the point specified \n",
+    "        by val_dict\n",
     "    \"\"\"\n",
     "    def evaluation_at(self, val_dict):\n",
     "    \n",
     "    \"\"\"\n",
-    "    The derivative with respect to certain variable / expression at the point specified by valdict. The output\n",
-    "    of this function will always be 0.0.\n",
+    "    The derivative with respect to certain variable / expression at \n",
+    "    the point specified by valdict. The output of this function will \n",
+    "    always be 0.0.\n",
     "    ------------------------\n",
     "    Input:\n",
-    "        var:      Expression, the variable / expression to calculate derivative with respect to\n",
-    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "        var:      Expression, the variable / expression to calculate \n",
+    "                  derivative with respect to\n",
+    "        val_dict: dict, a dictionary representing a point (keys are \n",
+    "                  Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the derivative with respect to certain variable / expression at the point specified by valdict.\n",
+    "        numeric, the derivative with respect to certain variable / \n",
+    "        expression at the point specified by valdict.\n",
     "    \"\"\"\n",
     "    def derivative_at(self, var, val_dict):"
    ]
@@ -705,21 +729,27 @@
     "    ------------------------\n",
     "    Input:\n",
     "        sub_expr1: Expression, the expression x in x -> exp(x)\n",
-    "        val_dict:  dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "        val_dict:  dict, a dictionary representing a point (keys are \n",
+    "                   Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the value of the expression at the point specified by val_dict\n",
+    "        numeric, the value of the expression at the point specified \n",
+    "        by val_dict\n",
     "    \"\"\"\n",
     "    @staticmethod\n",
     "    def evaluation_at(sub_expr1, val_dict):\n",
     "    \n",
     "    \"\"\"\n",
-    "    The derivative with respect to certain variable / expression at the point specified by valdict.\n",
+    "    The derivative with respect to certain variable / expression at \n",
+    "    the point specified by valdict.\n",
     "    ------------------------\n",
     "    Input:\n",
-    "        var:      Expression, the variable / expression to calculate derivative with respect to\n",
-    "        val_dict: dict, a dictionary representing a point (keys are Variables and values are numeric)\n",
+    "        var:      Expression, the variable / expression to calculate \n",
+    "                  derivative with respect to\n",
+    "        val_dict: dict, a dictionary representing a point (keys are \n",
+    "                  Variables and values are numeric)\n",
     "    Output:\n",
-    "        numeric, the derivative with respect to certain variable / expression at the point specified by valdict.\n",
+    "        numeric, the derivative with respect to certain variable / \n",
+    "        expression at the point specified by valdict.\n",
     "    \"\"\"\n",
     "    @staticmethod\n",
     "    def derivative_at(sub_expr1, var, val_dict):"
@@ -761,7 +791,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -775,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
