for milestone2 proposal

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -787,6 +787,58 @@
     "\"\"\"\n",
     "def exp(expr):"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Proposal for Additional Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.Second order gradient**\n",
+    "\n",
+    "The second order gradient(the Hessian) matrix can be widely helpful for many numerical optimization problems. For example, when we want to study the performance of gradient descent, we may want to know the geometric meaning of the point of convergence(namely, whether it is a saddle point,local min or local max). \n",
+    "\n",
+    "In the implementation level, it is equivalent to creating new variable instances with first derivative values(the Jacobian in vector scenario), and carry out a new round of derivative calculation. It is rather feasible from our initial inspection. \n",
+    "\n",
+    "We may be able to implement the 2nd-order gradient in a recursive way, therefore making 3rd, 4th and even higher order gradient available to user. But these degree of derivative won't be as useful as the Hessian.\n",
+    "\n",
+    "**2. Reverse Mode**\n",
+    "\n",
+    "We can try to implement the reverse mode autodifferentiation. The formula is listed out in background section.\n",
+    "After implementating reverse mode, combining one round of forward mode and one round of reverse mode gives us backpropogation.\n",
+    "\n",
+    "**3 Newton's Method**\n",
+    "\n",
+    "Since our main goal in developing this package is to assist numerical method application in need of gradient calculation, we may well provide an example feature using our autodifferentiation. The development of Newton's Method can serve as a demo and a feature of its own. Newton's method can approximate the root of f(X) = 0 where, f is a function of interest defined by the user.\n",
+    "\n",
+    "For Newtons' method implementation, see the following pseudo-code.\n",
+    "\n",
+    "```python\n",
+    "initialize X0 = 0\n",
+    "initialize delta = 10\n",
+    "initialize tolerance = 0.01\n",
+    "while delta > tolerance:\n",
+    "    x1 = x0-(f(x0)/Autodiff(f(x0))) # f is function of interests\n",
+    "    delta = x1-x0\n",
+    "    x0 = x1\n",
+    "return x1\n",
+    "```\n",
+    "\n",
+    "**Notice**\n",
+    "Our current plan is to write out Newton's Method as a demo of our package, and implement one of option 1 or 2. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -805,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
