modified table of contents in milestone2ipynb

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -21,7 +21,9 @@
     "    * [Core classes](#Core-classes)\n",
     "    * [Important attributes](#Important-attributes)\n",
     "    * [External dependencies](#External-dependencies)\n",
-    "    * [Elementary functions](#Elementary-functions)"
+    "    * [Elementary functions](#Elementary-functions)\n",
+    "* [Proposal for Additional Features](#Proposal-for-Additional-Features)\n",
+    " "
    ]
   },
   {
@@ -841,6 +843,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----\n",
     "## Proposal for Additional Features"
    ]
   },
@@ -861,7 +864,7 @@
     "We can try to implement the reverse mode autodifferentiation. The formula is listed out in background section.\n",
     "After implementating reverse mode, combining one round of forward mode and one round of reverse mode gives us backpropogation.\n",
     "\n",
-    "**3 Newton's Method**\n",
+    "**3.Newton's Method**\n",
     "\n",
     "Since our main goal in developing this package is to assist numerical method application in need of gradient calculation, we may well provide an example feature using our autodifferentiation. The development of Newton's Method can serve as a demo and a feature of its own. Newton's method can approximate the root of f(X) = 0 where, f is a function of interest defined by the user.\n",
     "\n",
