Fixed markdown in notebook.

--- a/code_explore/VectorFunction.ipynb
+++ b/code_explore/VectorFunction.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,6 @@
     "                        for expr in self._exprlist])\n",
     "    \n",
     "    def jacobian_at(self, val_dict):\n",
-    "        print(self._exprlist[0].derivative_at(list(val_dict.keys())[0], val_dict))\n",
     "        return np.array([[f.derivative_at(var, val_dict) for var in val_dict.keys()]\n",
     "                         for f in self._exprlist])"
    ]
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +69,7 @@
        "array([0.8660254, 1.       ])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +82,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When $(x, y) = (\\dfrac{\\pi}{6}, \\dfrac{\\pi}{6})$\n",
+    "When $(x, y) = (\\dfrac{\\pi}{6}, \\dfrac{\\pi}{6})$:\n",
+    "\n",
     "$$\n",
     "J_{h} = \n",
     "\\begin{bmatrix}\n",
@@ -102,24 +102,17 @@
     "\\end{bmatrix}\n",
     "=\n",
     "\\begin{bmatrix}\n",
-    "0.5 & \\0 \\\\\n",
-    "-\\sin(0) & \\sin(0)\n",
+    "0.5 & 0.5 \\\\\n",
+    "0 & 0\n",
     "\\end{bmatrix}\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5000000000000001\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -127,7 +120,7 @@
        "       [-0. ,  0. ]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,13 +128,6 @@
    "source": [
     "h.jacobian_at({x: np.pi/6, y: np.pi/6})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
